--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,12 +1,21 @@
 [project]
-name = "flashsale-backend"
+name = "backend"
 version = "0.1.0"
 description = ""
 authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
-requires-python = ">=3.12"
+readme = "README.md"
+requires-python = ">=3.12,<4.0"
 dependencies = [
+    "django (>=6.0.2,<7.0.0)",
+    "pydantic (>=2.12.5,<3.0.0)",
+    "environ (>=1.0,<2.0)",
+    "pydantic-settings (>=2.12.0,<3.0.0)",
+    "strawberry-graphql-django (>=0.75.0,<0.76.0)",
+    "redis (>=7.1.1,<8.0.0)",
+    "celery (>=5.6.2,<6.0.0)",
+    "djangorestframework (>=3.16.1,<4.0.0)"
 ]
 
 
