pushing last version

--- a/backend/.env-template
+++ b/backend/.env-template
@@ -1,39 +1,19 @@
+# ENV
+ENV=dev
+
 # POSTGRES
-POSTGRES_DB=alta
+POSTGRES_DB=flashsale
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pwd
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
-PGDATA=/var/lib/postgresql/data
 
 # BACKEND
 DEBUG=True
 SECRET_KEY=ключ
-ALLOWED_HOSTS="0.0.0.0,128.0.0.1,localhost"
-WEBHOOK_URL=https://altab24.agrochemist.ru/rest/id/key/
-WEBHOOK_EXTENDED_URL=https://altab24.agrochemist.ru/rest/id/key/
-CATALOG_BASE_URL=https://www.site.ru/api/
-CATALOG_TOKEN=token
-CELERY_BROKER_URL = "redis://127.0.0.1:6379/1"
-AXES_COOLOFF_TIME=900
-AXES_FAILURE_LIMIT=5
+ALLOWED_HOSTS=["0.0.0.0","127.0.0.1","localhost"]
 
-# ALAN
-ALAN_TOKENS_URL=https://app-api-scannerbz.alan-it.ru/users/token/
-ALAN_REFRESH_URL=https://app-api-scannerbz.alan-it.ru/users/token/refresh/
-ALAN_REPORT_URL=https://app-api-scannerbz.alan-it.ru/farms/account_farm_report/
-ENCRYPTION_KEY="key"
-
-# EMAIL
-EMAIL_HOST = smtp.example.com
-EMAIL_PORT = port
-EMAIL_USE_SSL = False
-EMAIL_USE_TLS = True
-EMAIL_HOST_USER = example@mail.com
-EMAIL_HOST_PASSWORD = password
-DEFAULT_FROM_EMAIL = example@mail.com
-
-# REDIS
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_DB=1
+# REDIS / CELERY
+REDIS_URL=redis://redis:6379/0
+CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
+CELERY_RESULT_BACKEND=redis://redis:6379/1
